# bsk-msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AccPktDataMsgPayload.msg  AccessMsgPayload.msg  AlbedoMsgPayload.msg  ArrayEffectorLockMsgPayload.msg  ArrayMotorForceMsgPayload.msg  ArrayMotorTorqueMsgPayload.msg  ArrayMotorVoltageMsgPayload.msg  AtmoPropsMsgPayload.msg  AttGuidMsgPayload.msg  AttRefMsgPayload.msg  AttStateMsgPayload.msg  BodyHeadingMsgPayload.msg  BoreAngleMsgPayload.msg  CMEstDataMsgPayload.msg  CModuleTemplateMsgPayload.msg  CSSArraySensorMsgPayload.msg  CSSConfigMsgPayload.msg  CSSRawDataMsgPayload.msg  CSSUnitConfigMsgPayload.msg  CameraConfigMsgPayload.msg  CameraImageMsgPayload.msg  ClassicElementsMsgPayload.msg  CmdForceBodyMsgPayload.msg  CmdForceInertialMsgPayload.msg  CmdTorqueBodyMsgPayload.msg  ColorMsgPayload.msg  ConstDynEffectorMsgPayload.msg  DataNodeUsageMsgPayload.msg  DesiredVelocityMsgPayload.msg  DeviceCmdMsgPayload.msg  DipoleRequestBodyMsgPayload.msg  DvBurnCmdMsgPayload.msg  DvExecutionDataMsgPayload.msg  EclipseMsgPayload.msg  EphemerisMsgPayload.msg  EpochMsgPayload.msg  ForceAtSiteMsgPayload.msg  FuelTankMsgPayload.msg  GravityGradientMsgPayload.msg  GroundStateMsgPayload.msg  (+77 more)
tools/: bsk_message_converter.py
